# MantisAnalysis

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  MantisAnalysis.bat  MantisAnalysis.command  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.js
.agent/: 00_START_HERE.md  AGENT_RULES.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG_AGENT.md  DECISIONS.md  HANDOFF.md  PROJECT_BRIEF.md  QUALITY_GATES.md  README.md  REFERENCES.md  REPO_MAP.md  RISKS.md  SESSION_BOOTSTRAP.md  SETUP_AND_RUN.md  STOPPING_CRITERIA.md  TASK_PLAYBOOK.md  TOOLS_AND_SKILLS.md  UI_VERIFICATION.md  WORKFLOWS.md  launch.json  manifest.yaml  settings.json  settings.local.README.md
.agent/agents/: README.md  accessibility-reviewer.md  docs-handoff-curator.md  fastapi-backend-reviewer.md  frontend-react-engineer.md  performance-reviewer.md  planner-architect.md  playwright-verifier.md  react-ui-ux-reviewer.md  risk-skeptic.md  test-coverage-reviewer.md
.agent/runs/: .gitkeep
.agent/runs/agentic-workflow-overhaul-v1/: ExecPlan.md  Status.md
.agent/runs/analysis-page-overhaul-v1/: ExecPlan.md  Status.md  inventory.md
.agent/runs/analysis-polish-v1/: ExecPlan.md  Status.md
.agent/runs/backlog-cleanup-v1/: ExecPlan.md  Status.md
.agent/runs/bundler-migration-v1/: ExecPlan.md  Status.md
.agent/runs/correctness-sweep-v1/: ExecPlan.md  Status.md
.agent/runs/dof-rewrite-v1/: ExecPlan.md  Status.md
.agent/runs/fpn-rewrite-v1/: ExecPlan.md  Status.md
.agent/runs/gui-rewrite-v1/: ExecPlan.md  Status.md
.agent/runs/harness-mechanical-v1/: ExecPlan.md  Status.md
.agent/runs/isp-modes-v1/: ExecPlan.md  Status.md
.agent/runs/isp-modes-v1-bugfixes-v1/: ExecPlan.md  Status.md
.agent/runs/play-export-and-roi-fixes-v1/: ExecPlan.md  Status.md
.agent/runs/play-tab-recording-inspection-rescue-v1/: BUG_REGRESSION_CHECKLIST.md  ExecPlan.md  REAL_DATASET_NOTES.md  Status.md  VERIFICATION_LOG.md
.agent/runs/playback-rebuild-v2/: ExecPlan.md  Status.md
.agent/runs/playback-ux-polish-v1/: Status.md
.agent/runs/plot-style-completion-v1/: ExecPlan.md  Status.md
.agent/runs/recording-inspection-implementation-v1/: API_DESIGN.md  DATA_MODEL.md  ExecPlan.md  Status.md  TEST_PLAN.md  UI_IMPLEMENTATION_NOTES.md
.agent/runs/usaf-channel-manual-points-v1/: ExecPlan.md  Status.md
.agent/skills/: README.md
.agent/skills/accessibility-check/: SKILL.md
.agent/skills/context-handoff/: SKILL.md
.agent/skills/dependency-change/: SKILL.md
.agent/skills/docs-sync/: SKILL.md
.agent/skills/emergency-recovery/: SKILL.md
.agent/skills/execplan-large-feature/: SKILL.md
.agent/skills/fastapi-api-change/: SKILL.md
.agent/skills/h5-io-data-pipeline-change/: SKILL.md
.agent/skills/independent-review-loop/: SKILL.md
.agent/skills/performance-profiling/: SKILL.md
.agent/skills/playwright-e2e-verification/: SKILL.md
.agent/skills/quality-gates/: SKILL.md
.agent/skills/react-browser-ui-change/: SKILL.md
.agent/skills/recording-inspection/: SKILL.md
.agent/skills/safe-git-and-worktrees/: SKILL.md
.agent/skills/session-start/: SKILL.md
.agent/skills/visual-regression/: SKILL.md
.agent/skills/visualization-canvas-image-pipeline/: SKILL.md
.agent/templates/: ExecPlan.md  Status.md
.github/auto-fix/: claude_fix.py
.github/workflows/: auto-fix.yml  release.yml  smoke.yml
.storybook/: main.ts  preview.ts
docs/validation/: README.md
mantisanalysis/: __init__.py  __main__.py  app.py  dark_frame.py  dof_analysis.py  dof_render.py  export_jobs.py  extract.py  figures.py  fpn_analysis.py  fpn_render.py  hdr_fusion.py  image_io.py  image_processing.py  isp_modes.py  labels.py  legacy_h5.py  playback_api.py  playback_export.py  playback_pipeline.py  playback_session.py  plotting.py  recording.py  resolution.py  rgb_grading.py  server.py  session.py  usaf_figures.py  usaf_groups.py  usaf_render.py
mantisanalysis/modes/: __init__.py  common.py  dof.py  fpn.py
mantisanalysis/playback/: __init__.py  api.py  events.py  h5io.py  library.py  render.py  workspace.py
packaging/: README.md  build.py  entry.py  mantisanalysis.spec  smoke_frozen.py
scripts/: check_agent_docs.py  check_frontend_lint.py  check_reviewer_evidence.py  check_skill_frontmatter.py  check_stopping_criteria.py  check_ui_verification.py  doctor.py  inspect_recording.py  mark_ui_edit.py  pick_lines_gui.py  run_usaf_resolution.py  smoke_test.py  snapshot_session.sh
tests/: conftest.py
tests/headless/: test_figures.py  test_playback_api.py  test_playback_v2_backend.py  test_playback_v2_render.py
tests/unit/: _h5_fixtures.py  test_bayer.py  test_check_agent_docs.py  test_check_reviewer_evidence.py  test_check_skill_frontmatter.py  test_check_stopping_criteria.py  test_dark_frame.py  test_delete_files.py  test_doctor.py  test_dof_metrics.py  test_export_jobs.py  test_export_overlay_mask.py  test_fpn_math.py  test_handoff.py  test_hdr_fusion.py  test_isp_modes.py  test_isp_override.py  test_labels.py  test_legacy_h5.py  test_legacy_resolution.py  test_michelson.py  test_play_routes.py  test_playback_pipeline.py  test_playback_stream.py  test_presets_api.py  test_recording_inspect.py  test_rgb_grading.py  test_roi_stats_isp.py  test_session_eviction.py  test_session_frames.py  test_usaf_lpmm.py  test_usaf_manual_points_api.py
tests/web/: conftest.py  test_accessibility.py  test_playback_boot.py  test_playback_v2_workflow.py  test_playback_visual_baselines.py  test_web_boot.py
web/: index-vite.html  index.html
web/src/: Brand.stories.tsx  Buttons.stories.tsx  ChannelChip.stories.tsx  ProcessingBadge.stories.tsx  analysis.jsx  analysis.tsx  app.jsx  app.tsx  dof.jsx  dof.tsx  fpn.jsx  fpn.tsx  isp_settings.jsx  isp_settings.tsx  main.jsx  main.tsx  playback.tsx  shared-esm.js  shared.jsx  shared.tsx  usaf.jsx  usaf.tsx
web/src/analysis/: filterbar.tsx  registry.ts  shell.stories.tsx  shell.tsx  types.ts
web/src/playback/: ConfirmRemoveButton.tsx  DarkFrameRow.tsx  EmptyState.tsx  ExportImageModal.tsx  ExportVideoModal.tsx  (+20 more)
(+54 files in other folders)
