[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantisanalysis"
version = "0.2.0"
description = "MantisCam RGB-NIR analysis suite — web GUI over pure-NumPy analysis (USAF · FPN · DoF)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Zhongmin Zhu", email = "j@polarxphotonics.com" }]
maintainers = [{ name = "BioSensors Lab @ UIUC" }]
keywords = ["imaging", "USAF", "MTF", "FPN", "depth-of-field",
            "RGB-NIR", "MantisCam", "GSense"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "h5py>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "tifffile>=2023.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.8",
]
# Standalone executable build — PyInstaller + archive tooling.
# See packaging/README.md.
build = [
    "pyinstaller>=6.6",
]
# Optional — install with `pip install -e .[web-smoke]` and then run
# `playwright install chromium` once to fetch the headless browser.
# The Playwright smoke test lives at `tests/web/test_web_boot.py` and is
# skipped automatically when the package isn't installed.
web-smoke = [
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]

[project.urls]
Homepage = "https://github.com/BioSensorsLab-Illinois/MantisAnalysis"
Repository = "https://github.com/BioSensorsLab-Illinois/MantisAnalysis"
Issues = "https://github.com/BioSensorsLab-Illinois/MantisAnalysis/issues"

[project.scripts]
mantisanalysis = "mantisanalysis.app:main_argv"

[tool.setuptools]
packages = ["mantisanalysis"]
include-package-data = true

[tool.setuptools.package-data]
mantisanalysis = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["outputs", "build", "dist", ".venv"]

[tool.ruff.lint]
# Conservative: no auto-formatting refactors imposed on the existing code.
# Focus on correctness lints + import hygiene.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — many existing lines are wider, address later
    "E731",   # lambda assignments — still used in small callback wiring
    "B008",   # function call as default arg — FastAPI Depends pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "headless: matplotlib Agg-backend figure tests; safe in CI",
    "server: FastAPI integration tests that spin up an in-process TestClient",
    "web_smoke: Playwright browser tests; require `pip install -e .[web-smoke]` + `playwright install chromium`",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
# Run on the package only at first; widen later.
files = ["mantisanalysis"]
